Fix elm overlay size on Firefox

--- a/css/style.less
+++ b/css/style.less
@@ -132,7 +132,7 @@ html, body {
 }
 
 .elm-overlay {
-  zoom: 0.5;
+  font-size: 13px;
 }
 
 .selections {
